--- a/code/testing_code.ipynb
+++ b/code/testing_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -52,27 +52,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>actualdpd_943P</td>\n",
-       "      <td>Days Past Due (DPD) of previous contract (actu...</td>\n",
+       "      <td>days past due (dpd) of previous contract (actu...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>actualdpdtolerance_344P</td>\n",
-       "      <td>DPD of client with tolerance.</td>\n",
+       "      <td>dpd of client with tolerance.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>addres_district_368M</td>\n",
-       "      <td>District of the person's address.</td>\n",
+       "      <td>district of the person's address.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>addres_role_871L</td>\n",
-       "      <td>Role of person's address.</td>\n",
+       "      <td>role of person's address.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>addres_zip_823M</td>\n",
-       "      <td>Zip code of the address.</td>\n",
+       "      <td>zip code of the address.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -80,14 +80,14 @@
       ],
       "text/plain": [
        "                  Variable                                        Description\n",
-       "0           actualdpd_943P  Days Past Due (DPD) of previous contract (actu...\n",
-       "1  actualdpdtolerance_344P                      DPD of client with tolerance.\n",
-       "2     addres_district_368M                  District of the person's address.\n",
-       "3         addres_role_871L                          Role of person's address.\n",
-       "4          addres_zip_823M                           Zip code of the address."
+       "0           actualdpd_943P  days past due (dpd) of previous contract (actu...\n",
+       "1  actualdpdtolerance_344P                      dpd of client with tolerance.\n",
+       "2     addres_district_368M                  district of the person's address.\n",
+       "3         addres_role_871L                          role of person's address.\n",
+       "4          addres_zip_823M                           zip code of the address."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Description\"] = df[\"Description\"].str.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -128,71 +137,102 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>byoccupationinc_3656910L</td>\n",
-       "      <td>Applicant's income from previous applications.</td>\n",
+       "      <th>1</th>\n",
+       "      <td>actualdpdtolerance_344P</td>\n",
+       "      <td>dpd of client with tolerance.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>commnoinclast6m_3546845L</td>\n",
-       "      <td>Number of communications indicating low income...</td>\n",
+       "      <th>11</th>\n",
+       "      <td>amtdepositbalance_4809441A</td>\n",
+       "      <td>deposit balance of client.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>205</th>\n",
-       "      <td>incometype_1044T</td>\n",
-       "      <td>Type of income of the person</td>\n",
+       "      <th>12</th>\n",
+       "      <td>amtdepositincoming_4809444A</td>\n",
+       "      <td>amount of incoming deposits to client's account.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>238</th>\n",
-       "      <td>lastotherinc_902A</td>\n",
-       "      <td>Amount of other income reported by the client ...</td>\n",
+       "      <th>13</th>\n",
+       "      <td>amtdepositoutgoing_4809442A</td>\n",
+       "      <td>amount of outgoing deposits from client's acco...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>251</th>\n",
-       "      <td>maininc_215A</td>\n",
-       "      <td>Client's primary income amount.</td>\n",
+       "      <th>20</th>\n",
+       "      <td>applicationcnt_361L</td>\n",
+       "      <td>number of applications associated with the sam...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>252</th>\n",
-       "      <td>mainoccupationinc_384A</td>\n",
-       "      <td>Amount of the main income of the client.</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>253</th>\n",
-       "      <td>mainoccupationinc_437A</td>\n",
-       "      <td>Client's main income amount in their previous ...</td>\n",
+       "      <th>438</th>\n",
+       "      <td>sex_738L</td>\n",
+       "      <td>gender of the client.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>450</th>\n",
+       "      <td>totalamount_503A</td>\n",
+       "      <td>total amount of active secured credit for a cl...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>459</th>\n",
+       "      <td>totalsettled_863A</td>\n",
+       "      <td>sum of all payments made by the client.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>463</th>\n",
+       "      <td>typesuite_864L</td>\n",
+       "      <td>persons accompanying the client during the loa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>464</th>\n",
+       "      <td>validfrom_1069D</td>\n",
+       "      <td>date since the client has an active campaign.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>86 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     Variable  \\\n",
-       "43   byoccupationinc_3656910L   \n",
-       "76   commnoinclast6m_3546845L   \n",
-       "205          incometype_1044T   \n",
-       "238         lastotherinc_902A   \n",
-       "251              maininc_215A   \n",
-       "252    mainoccupationinc_384A   \n",
-       "253    mainoccupationinc_437A   \n",
+       "                        Variable  \\\n",
+       "1        actualdpdtolerance_344P   \n",
+       "11    amtdepositbalance_4809441A   \n",
+       "12   amtdepositincoming_4809444A   \n",
+       "13   amtdepositoutgoing_4809442A   \n",
+       "20           applicationcnt_361L   \n",
+       "..                           ...   \n",
+       "438                     sex_738L   \n",
+       "450             totalamount_503A   \n",
+       "459            totalsettled_863A   \n",
+       "463               typesuite_864L   \n",
+       "464              validfrom_1069D   \n",
        "\n",
        "                                           Description  \n",
-       "43      Applicant's income from previous applications.  \n",
-       "76   Number of communications indicating low income...  \n",
-       "205                       Type of income of the person  \n",
-       "238  Amount of other income reported by the client ...  \n",
-       "251                    Client's primary income amount.  \n",
-       "252           Amount of the main income of the client.  \n",
-       "253  Client's main income amount in their previous ...  "
+       "1                        dpd of client with tolerance.  \n",
+       "11                          deposit balance of client.  \n",
+       "12    amount of incoming deposits to client's account.  \n",
+       "13   amount of outgoing deposits from client's acco...  \n",
+       "20   number of applications associated with the sam...  \n",
+       "..                                                 ...  \n",
+       "438                              gender of the client.  \n",
+       "450  total amount of active secured credit for a cl...  \n",
+       "459            sum of all payments made by the client.  \n",
+       "463  persons accompanying the client during the loa...  \n",
+       "464      date since the client has an active campaign.  \n",
+       "\n",
+       "[86 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filtered_df = df[df[\"Description\"].str.contains(\"income\" or \"credit\")]\n",
+    "filtered_df = df[df[\"Description\"].str.contains(\"cli\")]\n",
     "\n",
     "filtered_df\n"
    ]
