--- a/code/01 EDA.ipynb
+++ b/code/01 EDA.ipynb
@@ -14,12 +14,429 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('../data/processed/main_train.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>case_id</th>\n",
+       "      <th>date_decision_x</th>\n",
+       "      <th>MONTH_x</th>\n",
+       "      <th>WEEK_NUM_x</th>\n",
+       "      <th>target_x</th>\n",
+       "      <th>amtdebitincoming_4809443A</th>\n",
+       "      <th>amtdebitoutgoing_4809440A</th>\n",
+       "      <th>amtdepositbalance_4809441A</th>\n",
+       "      <th>amtdepositincoming_4809444A</th>\n",
+       "      <th>...</th>\n",
+       "      <th>maininc_215A</th>\n",
+       "      <th>downpmt_116A</th>\n",
+       "      <th>avgdbddpdlast24m_3658932P</th>\n",
+       "      <th>empl_employedtotal_800L</th>\n",
+       "      <th>empl_industry_691L</th>\n",
+       "      <th>date_decision</th>\n",
+       "      <th>MONTH</th>\n",
+       "      <th>WEEK_NUM</th>\n",
+       "      <th>target</th>\n",
+       "      <th>avgdbddpdlast3m_4187120P</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MORE_FIVE</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MORE_FIVE</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MORE_FIVE</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MORE_FIVE</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MORE_FIVE</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1526654</th>\n",
+       "      <td>1526654</td>\n",
+       "      <td>2703450</td>\n",
+       "      <td>2020-10-05</td>\n",
+       "      <td>202010</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>36000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-23.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-10-05</td>\n",
+       "      <td>202010</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-43.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1526655</th>\n",
+       "      <td>1526655</td>\n",
+       "      <td>2703451</td>\n",
+       "      <td>2020-10-05</td>\n",
+       "      <td>202010</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0</td>\n",
+       "      <td>27500.0</td>\n",
+       "      <td>27477.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-18.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-10-05</td>\n",
+       "      <td>202010</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1526656</th>\n",
+       "      <td>1526656</td>\n",
+       "      <td>2703452</td>\n",
+       "      <td>2020-10-05</td>\n",
+       "      <td>202010</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>24000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-10-05</td>\n",
+       "      <td>202010</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1526657</th>\n",
+       "      <td>1526657</td>\n",
+       "      <td>2703453</td>\n",
+       "      <td>2020-10-05</td>\n",
+       "      <td>202010</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13454.0</td>\n",
+       "      <td>13333.4</td>\n",
+       "      <td>822.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-33.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-10-05</td>\n",
+       "      <td>202010</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1526658</th>\n",
+       "      <td>1526658</td>\n",
+       "      <td>2703454</td>\n",
+       "      <td>2020-10-05</td>\n",
+       "      <td>202010</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>24000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-10-05</td>\n",
+       "      <td>202010</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1526659 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Unnamed: 0  case_id date_decision_x  MONTH_x  WEEK_NUM_x  target_x  \\\n",
+       "0                 0        0      2019-01-03   201901           0         0   \n",
+       "1                 1        1      2019-01-03   201901           0         0   \n",
+       "2                 2        2      2019-01-04   201901           0         0   \n",
+       "3                 3        3      2019-01-03   201901           0         0   \n",
+       "4                 4        4      2019-01-04   201901           0         1   \n",
+       "...             ...      ...             ...      ...         ...       ...   \n",
+       "1526654     1526654  2703450      2020-10-05   202010          91         0   \n",
+       "1526655     1526655  2703451      2020-10-05   202010          91         0   \n",
+       "1526656     1526656  2703452      2020-10-05   202010          91         0   \n",
+       "1526657     1526657  2703453      2020-10-05   202010          91         0   \n",
+       "1526658     1526658  2703454      2020-10-05   202010          91         0   \n",
+       "\n",
+       "         amtdebitincoming_4809443A  amtdebitoutgoing_4809440A  \\\n",
+       "0                              NaN                        NaN   \n",
+       "1                              NaN                        NaN   \n",
+       "2                              NaN                        NaN   \n",
+       "3                              NaN                        NaN   \n",
+       "4                              NaN                        NaN   \n",
+       "...                            ...                        ...   \n",
+       "1526654                        0.0                        0.0   \n",
+       "1526655                    27500.0                    27477.6   \n",
+       "1526656                        NaN                        NaN   \n",
+       "1526657                    13454.0                    13333.4   \n",
+       "1526658                        NaN                        NaN   \n",
+       "\n",
+       "         amtdepositbalance_4809441A  amtdepositincoming_4809444A  ...  \\\n",
+       "0                               NaN                          NaN  ...   \n",
+       "1                               NaN                          NaN  ...   \n",
+       "2                               NaN                          NaN  ...   \n",
+       "3                               NaN                          NaN  ...   \n",
+       "4                               NaN                          NaN  ...   \n",
+       "...                             ...                          ...  ...   \n",
+       "1526654                         0.0                          0.0  ...   \n",
+       "1526655                         0.0                          0.0  ...   \n",
+       "1526656                         NaN                          NaN  ...   \n",
+       "1526657                       822.0                          0.0  ...   \n",
+       "1526658                         NaN                          NaN  ...   \n",
+       "\n",
+       "         maininc_215A  downpmt_116A  avgdbddpdlast24m_3658932P  \\\n",
+       "0                 NaN           0.0                        NaN   \n",
+       "1                 NaN           0.0                        NaN   \n",
+       "2                 NaN           0.0                        NaN   \n",
+       "3                 NaN           0.0                        NaN   \n",
+       "4                 NaN           0.0                        NaN   \n",
+       "...               ...           ...                        ...   \n",
+       "1526654       36000.0           0.0                      -23.0   \n",
+       "1526655           NaN           0.0                      -18.0   \n",
+       "1526656       24000.0           0.0                      -12.0   \n",
+       "1526657           NaN           0.0                      -33.0   \n",
+       "1526658       24000.0           0.0                       -6.0   \n",
+       "\n",
+       "         empl_employedtotal_800L empl_industry_691L  date_decision   MONTH  \\\n",
+       "0                      MORE_FIVE              OTHER     2019-01-03  201901   \n",
+       "1                      MORE_FIVE              OTHER     2019-01-03  201901   \n",
+       "2                      MORE_FIVE              OTHER     2019-01-04  201901   \n",
+       "3                      MORE_FIVE              OTHER     2019-01-03  201901   \n",
+       "4                      MORE_FIVE              OTHER     2019-01-04  201901   \n",
+       "...                          ...                ...            ...     ...   \n",
+       "1526654                      NaN                NaN     2020-10-05  202010   \n",
+       "1526655                      NaN                NaN     2020-10-05  202010   \n",
+       "1526656                      NaN                NaN     2020-10-05  202010   \n",
+       "1526657                      NaN                NaN     2020-10-05  202010   \n",
+       "1526658                      NaN                NaN     2020-10-05  202010   \n",
+       "\n",
+       "         WEEK_NUM  target  avgdbddpdlast3m_4187120P  \n",
+       "0               0       0                       NaN  \n",
+       "1               0       0                       NaN  \n",
+       "2               0       0                       NaN  \n",
+       "3               0       0                       NaN  \n",
+       "4               0       1                       NaN  \n",
+       "...           ...     ...                       ...  \n",
+       "1526654        91       0                     -43.0  \n",
+       "1526655        91       0                     -12.0  \n",
+       "1526656        91       0                       NaN  \n",
+       "1526657        91       0                     -64.0  \n",
+       "1526658        91       0                      -5.0  \n",
+       "\n",
+       "[1526659 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
