Adding code into EDA

--- a/code/01 EDA.ipynb
+++ b/code/01 EDA.ipynb
@@ -14,11 +14,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('../data/processed/main_train.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>case_id</th>\n",
+       "      <th>date_decision_x</th>\n",
+       "      <th>MONTH_x</th>\n",
+       "      <th>WEEK_NUM_x</th>\n",
+       "      <th>target_x</th>\n",
+       "      <th>amtdebitincoming_4809443A</th>\n",
+       "      <th>amtdebitoutgoing_4809440A</th>\n",
+       "      <th>amtdepositbalance_4809441A</th>\n",
+       "      <th>amtdepositincoming_4809444A</th>\n",
+       "      <th>...</th>\n",
+       "      <th>maininc_215A</th>\n",
+       "      <th>downpmt_116A</th>\n",
+       "      <th>avgdbddpdlast24m_3658932P</th>\n",
+       "      <th>empl_employedtotal_800L</th>\n",
+       "      <th>empl_industry_691L</th>\n",
+       "      <th>date_decision</th>\n",
+       "      <th>MONTH</th>\n",
+       "      <th>WEEK_NUM</th>\n",
+       "      <th>target</th>\n",
+       "      <th>avgdbddpdlast3m_4187120P</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MORE_FIVE</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MORE_FIVE</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MORE_FIVE</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MORE_FIVE</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MORE_FIVE</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  case_id date_decision_x  MONTH_x  WEEK_NUM_x  target_x  \\\n",
+       "0           0        0      2019-01-03   201901           0         0   \n",
+       "1           1        1      2019-01-03   201901           0         0   \n",
+       "2           2        2      2019-01-04   201901           0         0   \n",
+       "3           3        3      2019-01-03   201901           0         0   \n",
+       "4           4        4      2019-01-04   201901           0         1   \n",
+       "\n",
+       "   amtdebitincoming_4809443A  amtdebitoutgoing_4809440A  \\\n",
+       "0                        NaN                        NaN   \n",
+       "1                        NaN                        NaN   \n",
+       "2                        NaN                        NaN   \n",
+       "3                        NaN                        NaN   \n",
+       "4                        NaN                        NaN   \n",
+       "\n",
+       "   amtdepositbalance_4809441A  amtdepositincoming_4809444A  ...  maininc_215A  \\\n",
+       "0                         NaN                          NaN  ...           NaN   \n",
+       "1                         NaN                          NaN  ...           NaN   \n",
+       "2                         NaN                          NaN  ...           NaN   \n",
+       "3                         NaN                          NaN  ...           NaN   \n",
+       "4                         NaN                          NaN  ...           NaN   \n",
+       "\n",
+       "   downpmt_116A  avgdbddpdlast24m_3658932P  empl_employedtotal_800L  \\\n",
+       "0           0.0                        NaN                MORE_FIVE   \n",
+       "1           0.0                        NaN                MORE_FIVE   \n",
+       "2           0.0                        NaN                MORE_FIVE   \n",
+       "3           0.0                        NaN                MORE_FIVE   \n",
+       "4           0.0                        NaN                MORE_FIVE   \n",
+       "\n",
+       "  empl_industry_691L  date_decision   MONTH  WEEK_NUM  target  \\\n",
+       "0              OTHER     2019-01-03  201901         0       0   \n",
+       "1              OTHER     2019-01-03  201901         0       0   \n",
+       "2              OTHER     2019-01-04  201901         0       0   \n",
+       "3              OTHER     2019-01-03  201901         0       0   \n",
+       "4              OTHER     2019-01-04  201901         0       1   \n",
+       "\n",
+       "   avgdbddpdlast3m_4187120P  \n",
+       "0                       NaN  \n",
+       "1                       NaN  \n",
+       "2                       NaN  \n",
+       "3                       NaN  \n",
+       "4                       NaN  \n",
+       "\n",
+       "[5 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(5)"
    ]
   }
  ],
