Updating the EDA

--- a/code/01 EDA.ipynb
+++ b/code/01 EDA.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data Dictionaries\n",
+    "\n",
+    "avgdbddpdlast3m_4187120P: Average days past or before due of payment during the last 3 months."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +251,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +363,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +383,7 @@
        "(1526659, 30)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,23 +400,320 @@
     "\n",
     "Here are the columns we will be dropping below as well as its calculations.\n",
     "\n",
-    "amtdebitincoming_4809443A    51109  / 1526659 = 3.3% non null value out of the whole column (Not sufficient for analysis)\n",
+    "\"amtdebitincoming_4809443A    51109  / 1526659 = 3.3% non null value out of the whole column (Not sufficient for analysis)\n",
+    "\n",
     "amtdebitoutgoing_4809440A    51109  / 1526659 = 3.3% non null value out of the whole column (Not sufficient for analysis)\n",
+    "\n",
     "amtdepositbalance_4809441A   51109  / 1526659 = 3.3% non null value out of the whole column (Not sufficient for analysis)\n",
+    "\n",
     "amtdepositincoming_4809444A  51109  / 1526659 = 3.3% non null value out of the whole column (Not sufficient for analysis)\n",
+    "\n",
     "amtdepositoutgoing_4809442A  51109  / 1526659 = 3.3% non null value out of the whole column (Not sufficient for analysis)\n",
-    "amount_416A                  105111 / 1526659 = \n",
-    "equalityempfrom_62L          37812  / 1526659 = \n",
+    "\n",
+    "amount_416A                  105111 / 1526659 = 6.9% non null value out of the whole column (Not sufficient for analysis)\n",
+    "\n",
+    "equalityempfrom_62L          37812  / 1526659 = 2.5% non null value out of the whole column (Not sufficient for analysis)\"\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>case_id</th>\n",
+       "      <th>date_decision_x</th>\n",
+       "      <th>MONTH_x</th>\n",
+       "      <th>WEEK_NUM_x</th>\n",
+       "      <th>target_x</th>\n",
+       "      <th>annuity_780A</th>\n",
+       "      <th>cntincpaycont9m_3716944L</th>\n",
+       "      <th>date_decision_y</th>\n",
+       "      <th>MONTH_y</th>\n",
+       "      <th>WEEK_NUM_y</th>\n",
+       "      <th>...</th>\n",
+       "      <th>maininc_215A</th>\n",
+       "      <th>downpmt_116A</th>\n",
+       "      <th>avgdbddpdlast24m_3658932P</th>\n",
+       "      <th>empl_employedtotal_800L</th>\n",
+       "      <th>empl_industry_691L</th>\n",
+       "      <th>date_decision</th>\n",
+       "      <th>MONTH</th>\n",
+       "      <th>WEEK_NUM</th>\n",
+       "      <th>target</th>\n",
+       "      <th>avgdbddpdlast3m_4187120P</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1917.6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MORE_FIVE</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3134.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MORE_FIVE</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4937.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MORE_FIVE</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4643.6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MORE_FIVE</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3390.2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MORE_FIVE</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   case_id date_decision_x  MONTH_x  WEEK_NUM_x  target_x  annuity_780A  \\\n",
+       "0        0      2019-01-03   201901           0         0        1917.6   \n",
+       "1        1      2019-01-03   201901           0         0        3134.0   \n",
+       "2        2      2019-01-04   201901           0         0        4937.0   \n",
+       "3        3      2019-01-03   201901           0         0        4643.6   \n",
+       "4        4      2019-01-04   201901           0         1        3390.2   \n",
+       "\n",
+       "   cntincpaycont9m_3716944L date_decision_y  MONTH_y  WEEK_NUM_y  ...  \\\n",
+       "0                       NaN      2019-01-03   201901           0  ...   \n",
+       "1                       NaN      2019-01-03   201901           0  ...   \n",
+       "2                       NaN      2019-01-04   201901           0  ...   \n",
+       "3                       NaN      2019-01-03   201901           0  ...   \n",
+       "4                       NaN      2019-01-04   201901           0  ...   \n",
+       "\n",
+       "   maininc_215A  downpmt_116A  avgdbddpdlast24m_3658932P  \\\n",
+       "0           NaN           0.0                        NaN   \n",
+       "1           NaN           0.0                        NaN   \n",
+       "2           NaN           0.0                        NaN   \n",
+       "3           NaN           0.0                        NaN   \n",
+       "4           NaN           0.0                        NaN   \n",
+       "\n",
+       "   empl_employedtotal_800L  empl_industry_691L  date_decision   MONTH  \\\n",
+       "0                MORE_FIVE               OTHER     2019-01-03  201901   \n",
+       "1                MORE_FIVE               OTHER     2019-01-03  201901   \n",
+       "2                MORE_FIVE               OTHER     2019-01-04  201901   \n",
+       "3                MORE_FIVE               OTHER     2019-01-03  201901   \n",
+       "4                MORE_FIVE               OTHER     2019-01-04  201901   \n",
+       "\n",
+       "  WEEK_NUM target  avgdbddpdlast3m_4187120P  \n",
+       "0        0      0                       NaN  \n",
+       "1        0      0                       NaN  \n",
+       "2        0      0                       NaN  \n",
+       "3        0      0                       NaN  \n",
+       "4        0      1                       NaN  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df = df.drop(columns= ['amtdebitincoming_4809443A','amtdebitoutgoing_4809440A', 'amtdepositbalance_4809441A', 'amtdepositincoming_4809444A', 'amtdepositoutgoing_4809442A', 'amount_416A', 'equalityempfrom_62L'], axis = 1)\n",
+    "\n",
+    "new_df.head(5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to oversample this column based on the exact ratio of the values that currently exist in the column\n",
+    "We decided that we would convert this categorical column into binary true or false on whether or not someone has reported their employment history. This is because we determined that this column would be important in our analysis, but we have way too much null values in our columns. We didn't want to introduce bias by adding in new data, or oversampling the data and introduction incorrect correlation between variables. That is why we decided to look at this data from a high level view and convert the data into binary values.\n",
     "\n",
-    "empl_employedtotal_800L\n"
+    "\"empl_employedtotal_800L\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "empl_employedtotal_800L\n",
+       "Missing    1004548\n",
+       "Present     522111\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df['empl_employedtotal_800L'].fillna(value = 'Missing', inplace = True)\n",
+    "new_df['empl_employedtotal_800L'].replace(to_replace = ['MORE_FIVE','MORE_ONE','LESS_ONE'] , value = \"Present\", inplace = True)\n",
+    "\n",
+    "new_df[\"empl_employedtotal_800L\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** NOTE TO SELF ** \n",
+    "\n",
+    "\"empl_industry_691L\" - We will conduct some EDA on this column and later deciding what we should do with it since it contains so much null values but still important data.\n",
+    "\n",
+    "\"empl_employedtotal_800L\" and \"691L\" could they both share the same missing value in terms of the rows? Might be interesting to look at when considering machine learning model and whether we should drop one column."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We decided after doing some statistical exploration on the column \"avgdbddpdlast24m_3658932P\" that we would fill in the rest of the missing value with median. Since the median best captures the overall data without introducing much bias and influence on the overall column. It seems like the best solution towards tackling the missing values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_median = new_df['avgdbddpdlast24m_3658932P'].median()\n",
+    "new_df['avgdbddpdlast24m_3658932P'].fillna(compute_median, inplace = True)\n",
+    "new_df['avgdbddpdlast24m_3658932P'].isna().sum()"
    ]
   },
   {
@@ -737,7 +1043,7 @@
     }
    ],
    "source": [
-    "df.describe()"
+    "new_df.describe()"
    ]
   },
   {
